<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBaseline_toBottomOf="parent"
    app:layout_constraintHeight_percent="0.78"
    app:layout_constraintVertical_bias="1"
    android:background="@drawable/whitebg">

    <ImageView
        android:id="@+id/pnblogo_img"
        android:layout_width="480dp"
        android:layout_height="160dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:background="@drawable/pnblogo"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_pnb"
        android:textColor="@color/white"
        android:fontFamily="@font/aldrich"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pnblogo_img" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:stretchColumns="1"
        android:background="@color/white"
        android:alpha="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.05">

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/bank" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/punjab_national_bank" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/branch" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/gautam_budh_university" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/ifsc_code" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/punb0666000" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/micr_code" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/_110024512" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/state" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/uttar_pradesh" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/district" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/gautam_buddha_nagar" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"

                android:text="@string/city" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/noida" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/branch_code" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/branchcode" />
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/divider6"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:alpha="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/bankdet"/>
<TableLayout
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@color/white"
    android:alpha="0.8"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text"
    app:layout_constraintVertical_bias="0.2">
    <TableRow>

        <TextView
            android:padding="3dip"
            android:text= "PNB OOSA" />

        <TextView
            android:id="@+id/pnburl"
            android:gravity="end"
            android:padding="3dip"
            android:text="https://pnbnet.org.in/OOSA/" />
    </TableRow>
</TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>