<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Helpdeskpage"
    android:background="@drawable/whitebg">

    <TextView
        android:id="@+id/helpdesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpdesk"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:fontFamily="@font/aldrich"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>




    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpline_contacts"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/helpdesk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.09">

    </TextView>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView43"
        app:layout_constraintVertical_bias="0.05"
        android:background="@color/white">

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="General Enquiry"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/genrcall"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:text="@string/General_phn"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/admission_phn" />

            <Button
                android:id="@+id/admicall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/phn_admin"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/ahdtfi" />

            <Button
                android:id="@+id/admicall2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/admin_phn2"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/chief_warden" />

            <Button
                android:id="@+id/wardcall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/warden_phn"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/dsa" />

            <Button
                android:id="@+id/dsacall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/dsa_phn"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/ict" />

            <Button
                android:id="@+id/ictcall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/ict_phn"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"/>
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:id="@+id/frameLayout6"
        android:layout_width="364dp"
        android:layout_height="75dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.057"
        android:backgroundTint="@color/white">

        <ImageView
            android:layout_width="79dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
           android:layout_marginTop="15sp"
            android:src="@drawable/faq" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/faq"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="51dp"
            android:layout_height="46dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@drawable/nextbutton"
            tools:ignore="ContentDescription">

        </ImageButton>

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>