<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:shadowColor="@color/black"
        android:text="@string/admission"
        android:textAlignment="center"
        android:background="@drawable/round_bg"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <FrameLayout
        android:id="@+id/frameLayout01"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_height="100dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:layout_constraintVertical_bias="0.05">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/todo"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/fees" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/fees"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/bfees"
            android:layout_width="63dp"
            android:layout_height="46dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@drawable/nextbutton"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout02"
        android:layout_width="356dp"
        android:layout_height="96dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout01"
        app:layout_constraintVertical_bias="0.02">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:src="@drawable/agreement" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/admission_brochure"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/badmisbro"
            android:layout_width="51dp"
            android:layout_height="46dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@drawable/nextbutton"
            tools:ignore="ContentDescription">

        </ImageButton>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout03"
        android:layout_width="356dp"
        android:layout_height="96dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout02"
        app:layout_constraintVertical_bias="0.02">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:src="@drawable/seats" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/admissionopt"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/bprogram"
            android:layout_width="51dp"
            android:layout_height="46dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@drawable/nextbutton"
            tools:ignore="ContentDescription">

        </ImageButton>

    </FrameLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/links"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout03" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:stretchColumns="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.05">

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/website" />

            <TextView
                android:id="@+id/gbuacin"
                android:gravity="end"
                android:padding="3dp"
                android:text="@string/gbuurl" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/facebook" />

            <TextView
                android:id="@+id/fburl"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/fburl"/>
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/mail_id" />

            <TextView
                android:id="@+id/gbuemail"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/gbuemail" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text= "@string/instagram" />

            <TextView
                android:id="@+id/instaurl"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/instaurl" />
        </TableRow>



    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>